# DreamCompiler

./: Background.md  CHANGES.md  CMakeLists.txt  LICENSE  README.md
docs/: AUDIT.md  MULTI_GPU.md
docs/Other/: Background.md
examples/: export_int8_demo.dream  gpu_benchmark.dream  test_both_versions.c
examples/augment/: README.md  augment_demo.dream  te_x.csv  tr_x.csv  tr_y.csv
examples/basic/: ai_training.dream  production_training.dream
examples/embedded_deploy/: export_pytorch_model.py  test_c_inference.c
examples/flash_attention/: flash_demo.dream  flash_gpu_check.dream  flash_longseq.dream  flash_speed.dream  flash_train.dream  gpu_cpu_crossover.dream  matmul_speed.dream
examples/game_ai/: README.md  (+5 more)
interop/: README.md  c_api_demo.c  dream.h  dream_capture.h  example_collect.c  example_train.dream  mathlib.dream  use_mathlib.c
lib/: nn.dream
models/: ai_best.drck  ai_ckpt.drck  ai_final.drck  checkpoint.drck  final.drck
runtime/: ARCHITECTURE.md  runtime.cpp  runtime.h
src/: AST.cpp  AST.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
stdlib/: nn.dream
tests/: 01_basics.dream  02_print_semantics.dream  03_exact_sum.dream  04_scalar_accum.dream  05_bigint.dream  06_neg_dim.dream  07_too_large.dream  08_shape_mismatch.dream  09_matmul.dream  10_f32_matmul.dream  11_chained_as.dream  12_no_grad.dream  13_f32_index.dream  14_gradcheck.dream  15_gemm.dream  16_determinism.dream  17_augment.dream  18_gpu.dream  19_distributed.dream  20_comm.dream  21_zero.dream  22_scaling.dream  23_speedup.dream  24_tensor_parallel.dream  25_flash_attention.dream  26_flash_backward.dream  27_pipeline_parallel.dream  28_checkpoint.dream  29_microbatch.dream  30_bf16.dream  31_moe.dream  32_dataloader.dream  34_minmax.dream  35_mse.dream
(+42 files in other folders)
